--- a/client/www/index.html
+++ b/client/www/index.html
@@ -13,8 +13,6 @@
   <script src="/assets/lib.js" type="text/javascript"></script>
   <script src="/assets/application.js" type="text/javascript"></script>
   <script type="text/javascript">
-    _app = new Cymon.Application({
-
-    })
+    _app = new Cymon.Application()
   </script>
 </html>
